# TopoTactics

./: CMakeLists.txt  README.md  Test.cpp  TopoTactics.code-workspace  imgui.ini
headers/: Coalition.h  TextureManager.h
headers/Board/: Board.h  Line.h  Piece.h  Vertex.h  VertexProps.h
headers/Cards/: Card.h  CardProps.h
headers/UI/: Button.h  HrzLayoutGrp.h
imgui/: imconfig.h  imgui_demo.cpp
src/: TextureManager.cpp
src/Board/: Board.cpp  Line.cpp  Piece.cpp  Vertex.cpp
src/Board/files/: board1.txt  board2.txt  board3.txt
src/Cards/: Card.cpp
src/Client/: Client.cpp  TextureManager.cpp
src/UI/: Button.cpp  HrzLayoutGrp.cpp
src/server/: Server.cpp
